--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,36 @@
 spring.application.name=InstaBiz Analytics
+
+# H2 in-memory ????
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ???? SQL
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Meta ????? (?????? ?????????!)
+meta.client-id=1353378776069518
+meta.client-secret=ce7eae1ece122fa5f12b4fc1d33e61a7
+
+# OAuth2 ??? Instagram
+spring.security.oauth2.client.registration.instagram.client-id=${meta.client-id}
+spring.security.oauth2.client.registration.instagram.client-secret=${meta.client-secret}
+spring.security.oauth2.client.registration.instagram.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.instagram.redirect-uri=http://localhost:8080/login/oauth2/code/instagram
+spring.security.oauth2.client.registration.instagram.scope=instagram_basic,instagram_manage_insights,pages_show_list,pages_read_engagement,user_profile,user_media
+
+# Provider (???? ???? ??????????)
+spring.security.oauth2.client.provider.instagram.authorization-uri=https://api.instagram.com/oauth/authorize
+spring.security.oauth2.client.provider.instagram.token-uri=https://api.instagram.com/oauth/access_token
+spring.security.oauth2.client.provider.instagram.user-info-uri=https://graph.instagram.com/me?fields=id,username
+
+# ??????????? ???????
+spring.web.resources.static-locations=classpath:/static/
+server.servlet.context-path=/
